[package]
name = "hermit-rs"
version = "0.2.2"
authors = [
	"Stefan Lankes <slankes@eonerc.rwth-aachen.de>",
	"Colin Finck <colin.finck@rwth-aachen.de>"
]

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "1.0.1"
spin = "0.4.6"

[dependencies.hermit-multiboot]
path = "../crates/hermit-multiboot"

[dependencies.lazy_static]
version = "0.2.9"
features = ["spin_no_std"]

[dependencies.raw-cpuid]
path = "../crates/raw_cpuid"

[dependencies.x86]
path = "../crates/x86"
default-features = false

# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-C debuginfo`
                   # a value of `true` is equivalent to `2`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false        # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
                   # `codegen-units` is ignored when `lto = true`

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
