[package]
name = "hermit-rs"
version = "0.3.4"
authors = [
	"Stefan Lankes <slankes@eonerc.rwth-aachen.de>",
	"Colin Finck <colin.finck@rwth-aachen.de>"
]

[lib]
crate-type = ["staticlib"]

[features]
#default = ["vga"]
vga = []

[dependencies]
bitflags = "1.0.3"
spin = "0.4.9"

[target.'cfg(target_arch = "x86_64")'.dependencies.hermit-multiboot]
path = "../crates/hermit-multiboot"

[dependencies.lazy_static]
version = "1.0.1"
features = ["spin_no_std"]

[target.'cfg(target_arch = "x86_64")'.dependencies.raw-cpuid]
version = "5.0.0"
features = ["nightly"]

[target.'cfg(target_arch = "x86_64")'.dependencies.x86]
version = "0.9.0"
default-features = false

# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-C debuginfo`
                   # a value of `true` is equivalent to `2`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false        # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
                   # `codegen-units` is ignored when `lto = true`

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
