[package]
name = "hermit-loader"
version = "0.2.2"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>", "Colin Finck <colin.finck@rwth-aachen.de>"]

[dependencies]
bitflags = "1.0.3"

[target.'cfg(target_arch = "aarch64")'.dependencies.byteorder]
version = "1.2.4"
default-features = false

[target.'cfg(target_arch = "aarch64")'.dependencies.hermit-dtb]
git = "https://github.com/hermitcore/dtb.git"

[target.'cfg(target_arch = "x86_64")'.dependencies.hermit-multiboot]
git = "https://github.com/hermitcore/multiboot.git"

[dependencies.lazy_static]
version = "1.0.1"
features = ["spin_no_std"]

[target.'cfg(target_arch = "x86_64")'.dependencies.x86]
git = "https://github.com/hermitcore/rust-x86.git"
branch = "hermit"
default-features = false

[package.metadata.cargo-xbuild]
memcpy = true

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
