[package]
name = "virtio-spec"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "Definitions from the Virtual I/O Device (VIRTIO) specification."
repository = "https://github.com/hermit-os/kernel"
license = "MIT OR Apache-2.0"
keywords = ["virtio", "driver", "volatile"]
categories = ["no-std", "no-std::no-alloc"]

[dependencies]
bitflags = "2"
endian-num = { version = "0.1", features = ["bitflags", "linux-types"] }
num_enum = { version = "0.7", default-features = false }
pci_types = "0.7"
volatile = "0.6"
volatile-macro = "0.6"
zerocopy = { version = "0.7", optional = true, default-features = false }
zerocopy-derive = { version = "0.7", optional = true }

[features]
zerocopy = ["dep:zerocopy", "dep:zerocopy-derive", "endian-num/zerocopy"]
