[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[features]
default = ["ci"]
ci = [
    "dep:cargo_metadata",
    "dep:flate2",
    "dep:hermit-entry",
    "dep:libc",
    "dep:ovmf-prebuilt",
    "dep:sysinfo",
    "dep:tar",
    "dep:toml",
    "dep:ureq",
    "dep:vsock",
    "dep:wait-timeout",
    "dep:walkdir",
]

[dependencies]
anyhow = "1.0"
cargo_metadata = { version = "0.23", optional = true }
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1.1", optional = true }
goblin = { version = "0.10", default-features = false, features = ["archive", "elf32", "elf64", "std"] }
hermit-entry = { version = "0.10", features = ["loader"], optional = true }
home = "0.5"
libc = { version = "0.2", optional = true }
ovmf-prebuilt = { version = "0.2", optional = true }
sysinfo = { version = "0.39", optional = true }
tar = { version = "0.4", optional = true }
toml = { version = "1.1", optional = true }
ureq = { version = "3", default-features = false, features = ["rustls"], optional = true }
vsock = { version = "0.5", optional = true }
wait-timeout = { version = "0.2", optional = true }
walkdir = { version = "2.5", optional = true }
xshell = "0.2"

[lints]
workspace = true
